--- a/app/donation-widget/donation-widget.html
+++ b/app/donation-widget/donation-widget.html
@@ -4,10 +4,10 @@
 
     <p class="product-headline">Imaginary product </p>
 
-    <!-- <div ng-switch on="project.isGoalReached"> -->
-        <!-- <hr class="progressbarDone" > ng-switch-when="true" -->
-        <md-progress-linear  md-mode="determinate" value="{{project.progressProcent}}"></md-progress-linear> <!--  ng-switch-when="false" -->
-    <!-- </div> -->
+    <div ng-switch on="project.isGoalReached">
+        <hr ng-switch-when="true" class="progressbarDone"  >
+        <md-progress-linear ng-switch-when="false" md-mode="determinate" value="{{project.progressProcent}}"></md-progress-linear>
+    </div>
 
     <form name="form" ng-submit="giveNow($scope.donation)" class="form-horizontal ng-dirty ng-valid ng-valid-required">
 
