--- a/app/index.html
+++ b/app/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-    <div ng-view></div>
-
+    <donation-widget></donation-widget>
 
     <!-- Angular Material requires Angular.js Libraries -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
@@ -25,6 +24,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js"></script>
     <!-- Local scripts -->
     <script src="app.js"></script>
+    <!-- <script src="donation-widget/donation-widget.js"></script> -->
     <script src="donation-widget/donation-widget.js"></script>
 </body>
 </html>
